--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arco Uno Basic</title>
-    <meta name="description" content="Opinionated Vite Starter Template">
+    <title>fabric-arco-editor</title>
+    <meta name="description" content="fabric-arco-editor for vue3">
   </head>
   <body class="font-sans dark:text-white dark:bg-hex-121212">
     <div id="app"></div>
